Type:
Bug
Priority:
Critical
Resolution:
Fixed
Affects Version/s:
N/A
MDEV-29596 removed READ_ONLY ADMIN privilege from the SUPER alias, so new users which are granted SUPER privilege won't get READ_ONLY ADMIN automatically. However, to maintain backward compatibility, the old users (created before the change) which have SUPER privilege shouldn't lose the READ_ONLY ADMIN capacity, so READ_ONLY ADMIN privilege should be granted to them upon upgrade.
is caused by
MDEV-29596
Separate SUPER and READ ONLY ADMIN privileges
Closed
There are no comments yet on this issue.
{"report":{"fcp":791.2999999523163,"ttfb":164.79999995231628,"pageVisibility":"visible","entityId":114944,"key":"jira.project.issue.view-issue","isInitial":true,"threshold":1000,"elementTimings":{},"userDeviceMemory":8,"userDeviceProcessors":64,"apdex":1,"journeyId":"36e2b252-3fa5-405b-9af0-c74241d728d0","navigationType":0,"readyForUser":893,"redirectCount":0,"resourceLoadedEnd":512.5,"resourceLoadedStart":172.59999990463257,"resourceTiming":[{"duration":7.299999952316284,"initiatorType":"link","name":"https://jira.mariadb.org/s/2c21342762a6a02add1c328bed317ffd-CDN/lu2bu7/820016/12ta74/0a8bac35585be7fc6c9cc5a0464cd4cf/_/download/contextbatch/css/_super/batch.css","startTime":172.59999990463257,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":172.59999990463257,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":179.89999985694885,"responseStart":0,"secureConnectionStart":0},{"duration":8.200000047683716,"initiatorType":"link","name":"https://jira.mariadb.org/s/7ebd35e77e471bc30ff0eba799ebc151-CDN/lu2bu7/820016/12ta74/8679b4946efa1a0bb029a3a22206fb5d/_/download/contextbatch/css/jira.browse.project,project.issue.navigator,jira.view.issue,jira.general,jira.global,atl.general,-_super/batch.css?agile_global_admin_condition=true&jag=true&jira.create.linked.issue=true&slack-enabled=true","startTime":172.79999995231628,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":172.79999995231628,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":181,"responseStart":0,"secureConnectionStart":0},{"duration":213.60000014305115,"initiatorType":"script","name":"https://jira.mariadb.org/s/fbf975c0cce4b1abf04784eeae9ba1f4-CDN/lu2bu7/820016/12ta74/0a8bac35585be7fc6c9cc5a0464cd4cf/_/download/contextbatch/js/_super/batch.js?locale=en","startTime":172.89999985694885,"connectEnd":172.89999985694885,"connectStart":172.89999985694885,"domainLookupEnd":172.89999985694885,"domainLookupStart":172.89999985694885,"fetchStart":172.89999985694885,"redirectEnd":0,"redirectStart":0,"requestStart":184.39999985694885,"responseEnd":386.5,"responseStart":201.20000004768372,"secureConnectionStart":172.89999985694885},{"duration":339.5,"initiatorType":"script","name":"https://jira.mariadb.org/s/099b33461394b8015fc36c0a4b96e19f-CDN/lu2bu7/820016/12ta74/8679b4946efa1a0bb029a3a22206fb5d/_/download/contextbatch/js/jira.browse.project,project.issue.navigator,jira.view.issue,jira.general,jira.global,atl.general,-_super/batch.js?agile_global_admin_condition=true&jag=true&jira.create.linked.issue=true&locale=en&slack-enabled=true","startTime":173,"connectEnd":173,"connectStart":173,"domainLookupEnd":173,"domainLookupStart":173,"fetchStart":173,"redirectEnd":0,"redirectStart":0,"requestStart":185.59999990463257,"responseEnd":512.5,"responseStart":204.39999985694885,"secureConnectionStart":173},{"duration":38.19999980926514,"initiatorType":"script","name":"https://jira.mariadb.org/s/94c15bff32baef80f4096a08aceae8bc-CDN/lu2bu7/820016/12ta74/c92c0caa9a024ae85b0ebdbed7fb4bd7/_/download/contextbatch/js/atl.global,-_super/batch.js?locale=en","startTime":173.20000004768372,"connectEnd":173.20000004768372,"connectStart":173.20000004768372,"domainLookupEnd":173.20000004768372,"domainLookupStart":173.20000004768372,"fetchStart":173.20000004768372,"redirectEnd":0,"redirectStart":0,"requestStart":186.09999990463257,"responseEnd":211.39999985694885,"responseStart":208.89999985694885,"secureConnectionStart":173.20000004768372},{"duration":37.799999952316284,"initiatorType":"script","name":"https://jira.mariadb.org/s/d41d8cd98f00b204e9800998ecf8427e-CDN/lu2bu7/820016/12ta74/1.0/_/download/batch/jira.webresources:calendar-en/jira.webresources:calendar-en.js","startTime":173.29999995231628,"connectEnd":173.29999995231628,"connectStart":173.29999995231628,"domainLookupEnd":173.29999995231628,"domainLookupStart":173.29999995231628,"fetchStart":173.29999995231628,"redirectEnd":0,"redirectStart":0,"requestStart":186.5,"responseEnd":211.09999990463257,"responseStart":208,"secureConnectionStart":173.29999995231628},{"duration":33.30000019073486,"initiatorType":"script","name":"https://jira.mariadb.org/s/d41d8cd98f00b204e9800998ecf8427e-CDN/lu2bu7/820016/12ta74/1.0/_/download/batch/jira.webresources:calendar-localisation-moment/jira.webresources:calendar-localisation-moment.js","startTime":173.39999985694885,"connectEnd":173.39999985694885,"connectStart":173.39999985694885,"domainLookupEnd":173.39999985694885,"domainLookupStart":173.39999985694885,"fetchStart":173.39999985694885,"redirectEnd":0,"redirectStart":0,"requestStart":187.79999995231628,"responseEnd":206.70000004768372,"responseStart":203.79999995231628,"secureConnectionStart":173.39999985694885},{"duration":13,"initiatorType":"link","name":"https://jira.mariadb.org/s/b04b06a02d1959df322d9cded3aeecc1-CDN/lu2bu7/820016/12ta74/a2ff6aa845ffc9a1d22fe23d9ee791fc/_/download/contextbatch/css/jira.global.look-and-feel,-_super/batch.css","startTime":173.5,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":173.5,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":186.5,"responseStart":0,"secureConnectionStart":0},{"duration":38.299999952316284,"initiatorType":"script","name":"https://jira.mariadb.org/rest/api/1.0/shortcuts/820016/47140b6e0a9bc2e4913da06536125810/shortcuts.js?context=issuenavigation&context=issueaction","startTime":173.5,"connectEnd":173.5,"connectStart":173.5,"domainLookupEnd":173.5,"domainLookupStart":173.5,"fetchStart":173.5,"redirectEnd":0,"redirectStart":0,"requestStart":189.20000004768372,"responseEnd":211.79999995231628,"responseStart":209.70000004768372,"secureConnectionStart":173.5},{"duration":14.799999952316284,"initiatorType":"link","name":"https://jira.mariadb.org/s/3ac36323ba5e4eb0af2aa7ac7211b4bb-CDN/lu2bu7/820016/12ta74/d176f0986478cc64f24226b3d20c140d/_/download/contextbatch/css/com.atlassian.jira.projects.sidebar.init,-_super,-project.issue.navigator,-jira.view.issue/batch.css?jira.create.linked.issue=true","startTime":173.70000004768372,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":173.70000004768372,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":188.5,"responseStart":0,"secureConnectionStart":0},{"duration":45.09999990463257,"initiatorType":"script","name":"https://jira.mariadb.org/s/3339d87fa2538a859872f2df449bf8d0-CDN/lu2bu7/820016/12ta74/d176f0986478cc64f24226b3d20c140d/_/download/contextbatch/js/com.atlassian.jira.projects.sidebar.init,-_super,-project.issue.navigator,-jira.view.issue/batch.js?jira.create.linked.issue=true&locale=en","startTime":173.79999995231628,"connectEnd":173.79999995231628,"connectStart":173.79999995231628,"domainLookupEnd":173.79999995231628,"domainLookupStart":173.79999995231628,"fetchStart":173.79999995231628,"redirectEnd":0,"redirectStart":0,"requestStart":192.09999990463257,"responseEnd":218.89999985694885,"responseStart":216.09999990463257,"secureConnectionStart":173.79999995231628},{"duration":290.2999999523163,"initiatorType":"script","name":"https://jira.mariadb.org/s/d41d8cd98f00b204e9800998ecf8427e-CDN/lu2bu7/820016/12ta74/1.0/_/download/batch/jira.webresources:bigpipe-js/jira.webresources:bigpipe-js.js","startTime":182.79999995231628,"connectEnd":182.79999995231628,"connectStart":182.79999995231628,"domainLookupEnd":182.79999995231628,"domainLookupStart":182.79999995231628,"fetchStart":182.79999995231628,"redirectEnd":0,"redirectStart":0,"requestStart":212,"responseEnd":473.09999990463257,"responseStart":465.7999999523163,"secureConnectionStart":182.79999995231628},{"duration":291.2000000476837,"initiatorType":"script","name":"https://jira.mariadb.org/s/d41d8cd98f00b204e9800998ecf8427e-CDN/lu2bu7/820016/12ta74/1.0/_/download/batch/jira.webresources:bigpipe-init/jira.webresources:bigpipe-init.js","startTime":183,"connectEnd":183,"connectStart":183,"domainLookupEnd":183,"domainLookupStart":183,"fetchStart":183,"redirectEnd":0,"redirectStart":0,"requestStart":230.70000004768372,"responseEnd":474.2000000476837,"responseStart":468.59999990463257,"secureConnectionStart":183},{"duration":113.69999980926514,"initiatorType":"xmlhttprequest","name":"https://jira.mariadb.org/rest/webResources/1.0/resources","startTime":532.2000000476837,"connectEnd":532.2000000476837,"connectStart":532.2000000476837,"domainLookupEnd":532.2000000476837,"domainLookupStart":532.2000000476837,"fetchStart":532.2000000476837,"redirectEnd":0,"redirectStart":0,"requestStart":614.7999999523163,"responseEnd":645.8999998569489,"responseStart":645.0999999046326,"secureConnectionStart":532.2000000476837},{"duration":244.5,"initiatorType":"xmlhttprequest","name":"https://jira.mariadb.org/rest/webResources/1.0/resources","startTime":743.8999998569489,"connectEnd":743.8999998569489,"connectStart":743.8999998569489,"domainLookupEnd":743.8999998569489,"domainLookupStart":743.8999998569489,"fetchStart":743.8999998569489,"redirectEnd":0,"redirectStart":0,"requestStart":957.7000000476837,"responseEnd":988.3999998569489,"responseStart":987.3999998569489,"secureConnectionStart":743.8999998569489},{"duration":184.29999995231628,"initiatorType":"script","name":"https://www.google-analytics.com/analytics.js","startTime":784.2999999523163,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":784.2999999523163,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":968.5999999046326,"responseStart":0,"secureConnectionStart":0}],"fetchStart":0,"domainLookupStart":0,"domainLookupEnd":0,"connectStart":0,"connectEnd":0,"requestStart":29,"responseStart":165,"responseEnd":182,"domLoading":168,"domInteractive":940,"domContentLoadedEventStart":940,"domContentLoadedEventEnd":983,"domComplete":1401,"loadEventStart":1401,"loadEventEnd":1401,"userAgent":"Mozilla/5.0 AppleWebKit/537.36 (KHTML, like Gecko; compatible; ClaudeBot/1.0; +claudebot@anthropic.com)","marks":[{"name":"bigPipe.sidebar-id.start","time":922.8999998569489},{"name":"bigPipe.sidebar-id.end","time":923.7000000476837},{"name":"bigPipe.activity-panel-pipe-id.start","time":923.7999999523163},{"name":"bigPipe.activity-panel-pipe-id.end","time":924.2999999523163},{"name":"activityTabFullyLoaded","time":990.7000000476837}],"measures":[],"correlationId":"dfee2dea052566","effectiveType":"4g","downlink":9.1,"rtt":0,"serverDuration":71,"dbReadsTimeInMs":12,"dbConnsTimeInMs":19,"applicationHash":"9d11dbea5f4be3d4cc21f03a88dd11d8c8687422","experiments":[]}}