MDEV-29632 SUPER users created before 10.11 should retain READ_ONLY ADMIN privilege upon upgrade